<resources>
    <string name="app_name">TaskApplication</string>
    <string name="title_activity_home_bottom_navigation">HomeBottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_content">Enter Content</string>
    <string name="pleaseEnterTitle">Please enter title</string>
    <string name="pleaseEnterContent">Please enter content</string>
    <string name="editNote">Edit Task</string>
    <string name="createNote">Create Task</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="search">Search</string>
    <string name="search_here">Search here</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="noNotes">You have no task yet</string>
    <string name="title_activity_test">test</string>
    <string name="archived">Archived</string>
    <string name="deleted">Deleted</string>
    <string name="unarchived">Unarchived</string>
    <string name="undo">Undo</string>
    <string name="archive">Archive</string>
    <string name="title_activity_archive">Archive</string>
    <string name="create_task">Create Task</string>
    <string name="done">Done</string>
    <string name="add_image">Add image</string>
    <string name="todo">todo</string>
</resources>